/**
 * PROFITHACK AI - Zero Trust Security Service (Node.js gRPC)
 * mTLS certificate management for inter-service communication
 * Port: 50058 | Enterprise-grade security
 */

import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import path from 'path';
import crypto from 'crypto';

const PROTO_PATH = path.join(process.cwd(), 'grpc_services/security_service/security.proto');

// Load the protobuf
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
});

const securityProto = grpc.loadPackageDefinition(packageDefinition).security as any;

/**
 * IssueMTLSCertificate RPC Implementation
 * Issues mTLS certificates for zero-trust inter-service auth
 */
function issueMTLSCertificate(call: any, callback: any) {
  const { service_name, common_name } = call.request;
  
  console.log(`üîê Cert Issue Request: ${service_name} | CN: ${common_name}`);
  
  // --- 1. Certificate Authority (CA) Logic (Mock) ---
  // In production:
  // - Interface with HashiCorp Vault
  // - Use Let's Encrypt for auto-renewal
  // - Implement Certificate Revocation List (CRL)
  
  const certData = crypto.randomBytes(64);
  const keyData = crypto.randomBytes(64);
  
  const certPEM = certData.toString('base64');
  const keyPEM = keyData.toString('base64');
  
  // Simulate secure generation (5ms)
  setTimeout(() => {
    console.log(`‚úÖ mTLS Cert Issued: ${service_name} | Valid: 90 days`);
    
    callback(null, {
      success: true,
      message: `mTLS Certificate issued for ${service_name}. Valid for 90 days.`,
      certificate_pem: certPEM,
      private_key_pem: keyPEM,
    });
  }, 5);
}

/**
 * RevokeMTLSCertificate RPC Implementation
 * Revokes existing mTLS certificates (adds to CRL)
 */
function revokeMTLSCertificate(call: any, callback: any) {
  const { service_name, common_name } = call.request;
  
  console.log(`üö´ Cert Revocation Request: ${service_name} | CN: ${common_name}`);
  
  // --- 2. Revocation Logic (Mock) ---
  // In production:
  // - Add cert to Certificate Revocation List (CRL)
  // - Update OCSP responder
  // - Notify all services of revocation
  
  setTimeout(() => {
    console.log(`‚úÖ mTLS Cert Revoked: ${service_name}`);
    
    callback(null, {
      success: true,
      message: `mTLS Certificate for ${service_name} successfully revoked.`,
      certificate_pem: '',
      private_key_pem: '',
    });
  }, 2);
}

/**
 * Start the Security gRPC Server
 */
export function startSecurityService(port: number = 50058) {
  const server = new grpc.Server();
  
  server.addService(securityProto.SecurityService.service, {
    IssueMTLSCertificate: issueMTLSCertificate,
    RevokeMTLSCertificate: revokeMTLSCertificate,
  });
  
  server.bindAsync(
    `0.0.0.0:${port}`,
    grpc.ServerCredentials.createInsecure(),
    (err, boundPort) => {
      if (err) {
        console.error('‚ùå Failed to start Security Service:', err);
        return;
      }
      
      console.log('üîê PROFITHACK AI - Zero Trust Security Service (gRPC)');
      console.log(`   Port: ${boundPort}`);
      console.log(`   Features: mTLS cert issuance, revocation, zero-trust`);
      console.log(`   Architecture: Certificate Authority (CA) integration`);
    }
  );
  
  return server;
}

// Start if run directly (ES module check)
if (import.meta.url === `file://${process.argv[1]}`) {
  startSecurityService();
}
